<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Pet_care"
        style="@style/sml_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/petcare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id = "@+id/form_label"
        style="@style/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pet_registration_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pet_care" />

    <TextView
        android:id = "@+id/micro_label"
        android:labelFor="@+id/micro_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/sml_header"
        android:text="@string/microchip_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_label" />
    <EditText
        android:id="@+id/micro_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:inputType="text"
        android:hint="ID"
        android:ems="9"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/form_label"
        app:layout_constraintLeft_toRightOf="@+id/micro_label" />

    <TextView
        android:id = "@+id/name_label"
        android:labelFor="@+id/name_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/micro_label" />

    <EditText
        android:id="@+id/name_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:ems="9"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/micro_textEdit"
        app:layout_constraintTop_toBottomOf="@id/micro_textEdit" />

    <TextView
        android:id = "@+id/gender_radio_label"
        android:labelFor="@+id/gender_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <RadioGroup
        android:id="@+id/gender_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/name_textEdit"
        app:layout_constraintTop_toBottomOf="@id/name_textEdit">

        <RadioButton
            android:id="@+id/male_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id = "@+id/email_label"
        android:labelFor="@+id/email_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_label" />

    <EditText
        android:id="@+id/email_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="9"
        android:hint="none@none.com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/gender_radioGroup"
        app:layout_constraintTop_toBottomOf="@id/gender_radioGroup" />

    <TextView
        android:id = "@+id/accessCode_label"
        android:labelFor="@+id/accessCode_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/access_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />
    <EditText
        android:id="@+id/accessCode_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="9"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/email_textEdit"
        app:layout_constraintTop_toBottomOf="@id/email_textEdit" />

    <TextView
        android:id = "@+id/confirmCode_label"
        android:labelFor="@+id/confirmCode_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/confirm_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessCode_label" />
    <EditText
        android:id="@+id/confirmCode_textEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="9"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/accessCode_textEdit"
        app:layout_constraintTop_toBottomOf="@id/accessCode_textEdit" />

    <TextView
        android:id = "@+id/breed_label"
        android:labelFor="@+id/breed_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/breed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmCode_label" />
    <Spinner
        android:id="@+id/breed_spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/confirmCode_textEdit"
        app:layout_constraintTop_toBottomOf="@id/confirmCode_textEdit" />

    <TextView
        android:id = "@+id/neutered_label"
        android:labelFor="@+id/neutered_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/sml_header"
        android:text="@string/neutered"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed_label" />
    <CheckBox
        android:id="@+id/neutered_checkbox"
        android:text="@string/is_neutered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/breed_spinner"
        app:layout_constraintTop_toBottomOf="@id/breed_spinner" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="ResetClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/neutered_label"
        app:layout_constraintTop_toBottomOf="@+id/neutered_checkbox" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/submit"
        android:onClick="SubmitClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_button"
        app:layout_constraintTop_toBottomOf="@+id/neutered_checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>